--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 
 <head>
     <tittle>site do vinicius</tittle>
+    <style>
+        body{
+            background-color: blueviolet;
+            color:black;
+        }
+    </style>
 </head>
 
 <body>
