--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         body{
             background-color: blueviolet;
             color:black;
+            text-align: center
         }
     </style>
 </head>
