--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         body{
             background-color: blueviolet;
             color:black;
-            text-align: center
+        }
+
+        h1{
+            text-align: center;
         }
     </style>
 </head>
