--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <h1>meu primeiro site</h1>
-    <p1>Neste site eu usei as tecnologias:</p1>
+    <p>este site eu usei as tecnologias:</p>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
