--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li>versel</li>
         <li>VSCode</li>
     </ol>
+    <img src="https://images.pexels.com/photos/1921336/pexels-photo-1921336.jpeg?auto=compress&cs=tinysrgb&w=600"/>
 </body>
 
 </html>
