--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
 <head>
     <tittle>site do vinicius</tittle>
     <style>
-        body{
+        body {
             background-color: blueviolet;
-            color:black;
+            color: black;
         }
 
-        h1{
+        h1 {
             text-align: center;
         }
 
-        p{
+        p {
             text-align: right;
         }
 
-        img{
+        img {
             width: 1000px;
             height: 750px;
             border: 3px slid black;
+        }
+
+        div{
+             display: flex;
+             flex-direction: row;
+             align-items: center;
+             justify-content: center;
+             position: relative;
+             width: 100%;
         }
     </style>
 </head>
@@ -38,7 +47,9 @@
         <li>versel</li>
         <li>VSCode</li>
     </ol>
-    <img src="https://images.pexels.com/photos/1921336/pexels-photo-1921336.jpeg?auto=compress&cs=tinysrgb&w=600"/>
+    <div>
+        <img src="https://images.pexels.com/photos/1921336/pexels-photo-1921336.jpeg?auto=compress&cs=tinysrgb&w=600" />
+    </div>
 </body>
 
 </html>
