--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
              position: relative;
              width: 100%;
         }
+
+
+        img:hover(){
+            border: 3px solid red;
+            transform: scale(1.2);
+        }
     </style>
 </head>
 
