--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
 
-        img:hover(){
+        img:hover{
             border: 3px solid red;
             transform: scale(1.2);
         }
