--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
         img:hover{
-            border: 3px dashed red;
+            border: 3px dotted red;
             transform: scale(1.2);
         }
     </style>
