--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <tittle>site do vinicius</tittle>
     <style>
         body {
-            background-color: blueviolet;
+            background-color: rgb(126, 74, 248);
             color: black;
         }
 
