--- a/index.html
+++ b/index.html
@@ -36,11 +36,24 @@
             border: 3px dotted red;
             transform: scale(1.2);
         }
+
+
+.bgi-shoulders-stencil-<uniquifier> {
+  font-family: "Big Shoulders Stencil", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
     </style>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil:opsz,wght@10..72,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=man_2" />
 </head>
 
 <body>
-    <h1>meu primeiro site</h1>
+    <h1 class="bgi-shoulders-stencil-<uniquifier">meu primeiro site</h1>
     <p>este site eu usei as tecnologias:</p>
     <ul>
         <li>HTML</li>
